input name issue

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="component">
     <div class='grid-item pageviews'><p><span id='pageNumber'>100k</span> pageviews</p></div>
     <div class='grid-item bar'>
-      <input type="range" min="0" max="4" value="1" id="slider" step="1">
+      <input aria-label="slider" type="range" min="0" max="4" value="1" id="slider" step="1">
     </div>
     <div class='grid-item pricing'><p><span id='price'>$12</span> / month</p></div>
     <div class='grid-item billing'> 
